log
Fri, Mar 21, 2025 11:09:49 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025  4:42:00 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
ca445db
Fri, Mar 21, 2025  5:31:29 PM: 
 tests:  0|5
total_score: 0/70
a10fd9a
Sat, Mar 22, 2025  4:37:10 PM: 
 exercises.c | 74 ++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 66 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:55:9: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
         push_back(L, elemento);
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3191e49
Fri, Apr 11, 2025  3:56:52 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:55:9: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
         push_back(L, elemento);
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7a17fd4
Fri, Apr 11, 2025  3:57:44 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:55:9: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
         push_back(L, elemento);
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3532076
Fri, Apr 11, 2025  4:00:43 PM: 
 exercises.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 30/70
7cd9a2f
Fri, Apr 11, 2025  4:03:22 PM: 
 exercises.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:128:19: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int valor = pop(aux);
                   ^~~
exercises.c:129:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(P2, valor);
                ^~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:130:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(P1, valor);
                ^~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
029aa89
